--- a/electron/mainWindow.html
+++ b/electron/mainWindow.html
@@ -21,9 +21,9 @@
         <ul class="collection list-group">
           <li class="collection-item list-group-item myText">
             <span class="text">
-              asdasdasdasdasdasdasdasdasdas
+              Welcome!!!
             </span>
-            <span class="ip">Client:1 192.168.0..1</span>
+            <span class="ip">By Creaters</span>
           </li>
         </ul>
       </div>
